--- a/stijl-pop.css
+++ b/stijl-pop.css
@@ -285,7 +285,7 @@ header .socials {
         }
         57%, 91% {
               width: 8rem;
-              color:#E49E2B;
+              color:black;
         }
   }
 
